After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 771549 - Reversing the UI for RTL no longer works in gnome shell
Reversing the UI for RTL no longer works in gnome shell
Status: RESOLVED FIXED
Product: mutter
Classification: Core
Component: general
3.21.x
Other Linux
: Normal normal
: ---
Assigned To: mutter-maint
mutter-maint
Depends on:
Blocks:
 
 
Reported: 2016-09-16 17:47 UTC by Abderrahim Kitouni
Modified: 2016-09-19 21:27 UTC
See Also:
GNOME target: 3.22
GNOME version: ---


Attachments
clutter: Reuse GTK+'s RTL/LTR handling (1.44 KB, patch)
2016-09-16 18:04 UTC, Florian Müllner
committed Details | Review

Description Abderrahim Kitouni 2016-09-16 17:47:39 UTC
This is caused by the fact that clutter_get_default_text_direction returns CLUTTER_TEXT_DIRECTION_LTR, because the translations have been removed from the copy of clutter embedded in mutter.

https://git.gnome.org/browse/mutter/tree/clutter/clutter/clutter-main.c#n706
https://git.gnome.org/browse/mutter/commit/?id=a4fb7ef5a3e8902a9ea45040df475735c862fcb0
Comment 1 Florian Müllner 2016-09-16 18:04:05 UTC
Created attachment 335728 [details] [review]
clutter: Reuse GTK+'s RTL/LTR handling

Commit a4fb7ef5a3e dropped translations of our internal cogl/clutter
forks, which broke the local-based text direction support. Instead
of bringing back translations just for this purpose, we can re-use
GTK's translations which use the same technique.

Only compile-tested on my part, so some proper testing would be appreciated.
Comment 2 Florian Müllner 2016-09-16 20:21:25 UTC
(In reply to Florian Müllner from comment #1)
> Only compile-tested on my part, so some proper testing would be appreciated.

Tested now with he_IL.utf8, everything looks right (to left) to me ...
Comment 3 Abderrahim Kitouni 2016-09-17 09:35:34 UTC
Yes, it's working fine. Thanks :-)
Comment 4 Rui Matos 2016-09-19 11:46:54 UTC
Review of attachment 335728 [details] [review]:

oops, looks good
Comment 5 Michael Catanzaro 2016-09-19 16:36:36 UTC
Review of attachment 335728 [details] [review]:

::: clutter/clutter/clutter-main.c
@@ +721,3 @@
     {
+      /* Re-use GTK+'s LTR/RTL handling */
+      const char *e = g_dgettext("gtk30", "default:LTR");

Missing space before opening parenthesis
Comment 6 Florian Müllner 2016-09-19 16:51:43 UTC
(In reply to Michael Catanzaro from comment #5)
> Missing space before opening parenthesis

Gah, fixed locally.
Comment 7 Florian Müllner 2016-09-19 21:27:01 UTC
Attachment 335728 [details] pushed as a4e69f3 - clutter: Reuse GTK+'s RTL/LTR handling